<resources>


    <string name="default_web_client_id_local">"285370486898-mp0mjk23rtot1sb4dae63jmud7qhhb99.apps.googleusercontent.com"</string>
    <string name="app_name">Nice Shoes</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- TODO: STRING MENU  -->
    <string name="nav_home">Inicio</string>
    <string name="nav_favorite">Favoritos</string>
    <string name="nav_offers">Ofertas</string>
    <string name="nav_purchase_history">Historial de compras</string>
    <string name="nav_shoes">Calzados</string>
    <string name="nav_my_orders">Mis pedidos</string>
    <string name="nav_state_account">Estado de cuenta</string>
    <string name="nav_add_shoes">Agregar Calzados</string>
    <string name="nav_sell_shoes">Venta de Calzados</string>
    <string name="nav_change_price">Cambiar precios</string>
    <string name="nav_state_accountAdmin">Estados de cuenta</string>
    <string name="nav_client">Clientes</string>
    <string name="nav_modify_shoe_list">Promociones</string>
    <string name="omboarding_tv_title">Ups! vemos que es la primera vez que ingresas!!, necesitaremos pedirte algunos datos mas... \n Por favor rellene los campos por unica vez y luego presione en registrar</string>
    <string name="bt_log_out_menu">CERRAR SESION</string>
    <string name="nav_details">Detalles</string>
    <!-- TODO: STRING LOGIN_LAYOUT  -->
    <string name="login_login">Iniciar sesion</string>
    <string name="login_support">En caso de problemas con la app, comunicarse con <b>soporte</b></string>

</resources>